# corvax_fm

./: .gitignore  Cargo.toml  PKGBUILD  README.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/config/src/: lib.rs
crates/io/: Cargo.toml
crates/io/src/: fs_ops.rs
crates/mupdf-ffi/: Cargo.toml  build.rs  wrapper.h
crates/mupdf-ffi/src/: lib.rs
crates/output-backends/: Cargo.toml
crates/output-backends/src/: kitty.rs  lib.rs
crates/raster/: Cargo.toml
crates/raster/src/: lib.rs
crates/rtfm-core/: Cargo.toml
crates/rtfm-core/src/: app_state.rs  clipboard.rs  lib.rs  plugin_manager.rs  preview.rs  task_manager.rs
crates/rtfm-core/tests/: test_app_state.rs
crates/ui/: Cargo.toml
crates/ui/src/: layout.rs  left_pane.rs  lib.rs  middle_pane.rs  right_pane.rs  top_bar.rs  tui.rs
crates/utils/: Cargo.toml
fm/: Cargo.toml
fm/src/: app.rs  config.rs  main.rs  settings.rs  ui.rs
