[package]
name = "fm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.99"
crossterm = "0.29.0"
image = "0.25.8"
ratatui = "0.29.0"
tar = "0.4.44"
zip = "4.6.1"
rascii_art = "0.3.4"
open = "5.3.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
dirs = "6.0.0"
viuer = { version = "0.9.2", features = ["print-file"] }
