[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
rtfm-core = { path = "../rtfm-core", features = ["mounts"] }
ui = { path = "../ui", features = ["mounts"] }
io = { path = "../io" }
config = { path = "../config" }
utils = { path = "../utils" }
output-backends = { path = "../output-backends" }
raster = { path = "../raster" }

tokio = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
anyhow = "1.0"
futures = "0.3"
log = { workspace = true }
fern = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
directories = { workspace = true }
