[package]
name = "rtfm-core"
version = "0.1.0"
edition = "2021"

[dependencies]
mupdf-ffi = { path = "../mupdf-ffi" }
raster = { path = "../raster" }
tokio = { workspace = true }
log = { workspace = true }
uuid = { workspace = true }
io = { path = "../io" }
directories = { workspace = true }
config = { path = "../config" }
proc-mounts = { workspace = true, optional = true }
plugin-ipc = { path = "../plugin-ipc" }
fs_extra = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempdir = { workspace = true }
tokio = { workspace = true }

[features]
mounts = ["dep:proc-mounts"]
